--- a/trunk/res/layout-xlarge/fragment_statistics.xml
+++ b/trunk/res/layout-xlarge/fragment_statistics.xml
@@ -11,11 +11,9 @@
 
         <LinearLayout
             android:id="@+id/ll_statistics_consumption"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/VehicleContainer"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="16dp" >
+            android:orientation="vertical" >
 
             <TextView
                 style="@style/sectionHeader"
@@ -24,58 +22,65 @@
                 android:text="@string/statistics_tv_consumption" />
 
             <TableLayout
-                android:layout_width="400dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
 
                 <TableRow
-                    android:layout_width="match_parent"
+                    android:layout_width="400dp"
                     android:layout_height="wrap_content" >
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
+                        style="@style/textSizeNormal"
                         android:text="@string/statistics_tv_average" />
 
                     <TextView
                         android:id="@+id/tv_statistics_fuel_average"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3" />
+                        android:layout_weight="3"
+                        style="@style/textSizeNormal"
+                        android:text="hallo" />
                 </TableRow>
 
                 <TableRow
-                    android:layout_width="match_parent"
+                    android:layout_width="400dp"
                     android:layout_height="wrap_content" >
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
-                        android:text="@string/statistics_tv_worst" />
+                        android:text="@string/statistics_tv_worst"
+                        style="@style/textSizeNormal" />
 
                     <TextView
                         android:id="@+id/tv_statistics_fuel_worst"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3" />
+                        android:layout_weight="3"
+                        style="@style/textSizeNormal" />
                 </TableRow>
 
                 <TableRow
-                    android:layout_width="match_parent"
+                    android:layout_width="400dp"
                     android:layout_height="wrap_content" >
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
-                        android:text="@string/statistics_tv_best" />
+                        android:text="@string/statistics_tv_best"
+                        style="@style/textSizeNormal" />
 
                     <TextView
                         android:id="@+id/tv_statistics_fuel_best"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3" />
+                        android:layout_weight="3"
+                        style="@style/textSizeNormal" />
                 </TableRow>
             </TableLayout>
 
@@ -90,64 +95,68 @@
                 android:layout_height="wrap_content" >
 
                 <TableRow
-                    android:layout_width="match_parent"
+                    android:layout_width="400dp"
                     android:layout_height="wrap_content" >
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
-                        android:text="@string/statistics_tv_average" />
+                        android:text="@string/statistics_tv_average"
+                        style="@style/textSizeNormal" />
 
                     <TextView
                         android:id="@+id/tv_statistics_fuel_average"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3" />
+                        android:layout_weight="3"
+                        style="@style/textSizeNormal" />
                 </TableRow>
 
                 <TableRow
-                    android:layout_width="match_parent"
+                    android:layout_width="400dp"
                     android:layout_height="wrap_content" >
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
-                        android:text="@string/statistics_tv_worst" />
+                        android:text="@string/statistics_tv_worst"
+                        style="@style/textSizeNormal" />
 
                     <TextView
                         android:id="@+id/tv_statistics_fuel_worst"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3" />
+                        android:layout_weight="3"
+                        style="@style/textSizeNormal" />
                 </TableRow>
 
                 <TableRow
-                    android:layout_width="match_parent"
+                    android:layout_width="400dp"
                     android:layout_height="wrap_content" >
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
-                        android:text="@string/statistics_tv_best" />
+                        android:text="@string/statistics_tv_best"
+                        style="@style/textSizeNormal" />
 
                     <TextView
                         android:id="@+id/tv_statistics_fuel_best"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3" />
+                        android:layout_weight="3"
+                        style="@style/textSizeNormal" />
                 </TableRow>
             </TableLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/VehicleContainer"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="16dp" >
+            android:orientation="vertical" >
 
             <TextView
                 style="@style/sectionHeader"
@@ -160,54 +169,60 @@
                 android:layout_height="wrap_content" >
 
                 <TableRow
-                    android:layout_width="match_parent"
+                    android:layout_width="400dp"
                     android:layout_height="wrap_content" >
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
-                        android:text="@string/statistics_tv_average" />
+                        android:text="@string/statistics_tv_average"
+                        style="@style/textSizeNormal" />
 
                     <TextView
                         android:id="@+id/tv_statistics_fuel_average"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3" />
+                        android:layout_weight="3"
+                        style="@style/textSizeNormal" />
                 </TableRow>
 
                 <TableRow
-                    android:layout_width="match_parent"
+                    android:layout_width="400dp"
                     android:layout_height="wrap_content" >
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
-                        android:text="@string/statistics_tv_worst" />
+                        android:text="@string/statistics_tv_worst"
+                        style="@style/textSizeNormal" />
 
                     <TextView
                         android:id="@+id/tv_statistics_fuel_worst"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3" />
+                        android:layout_weight="3"
+                        style="@style/textSizeNormal" />
                 </TableRow>
 
                 <TableRow
-                    android:layout_width="match_parent"
+                    android:layout_width="400dp"
                     android:layout_height="wrap_content" >
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
-                        android:text="@string/statistics_tv_best" />
+                        android:text="@string/statistics_tv_best"
+                        style="@style/textSizeNormal" />
 
                     <TextView
                         android:id="@+id/tv_statistics_fuel_best"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3" />
+                        android:layout_weight="3"
+                        style="@style/textSizeNormal" />
                 </TableRow>
             </TableLayout>
         </LinearLayout>
