--- a/trunk/res/layout/fragment_statistics.xml
+++ b/trunk/res/layout/fragment_statistics.xml
@@ -22,16 +22,17 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="7"
                 android:text="@string/statistics_tv_average" />
 
             <TextView
                 android:id="@+id/tv_statistics_fuel_average"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="3" />
+                android:layout_weight="3"
+                android:text="hallo" />
 
         </TableRow>
 
