--- a/trunk/res/layout/activity_edit_vehicle.xml
+++ b/trunk/res/layout/activity_edit_vehicle.xml
@@ -1,12 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
     <fragment
         android:id="@+id/newVehicle"
         android:name="de.timoklostermann.refuel.fragments.VehicleFragment"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
